System/UI/Framework/style.css
* {
    font-family: roboto;
}

.clock {
    top: 0;
    left: 45%;
    position: fixed;
    color: white;
}

h3 {
    color: black;
}

#slides {
    display: none;
}

.nav_bar {
    background-color: #3498db;
    width: 100%;
    overflow: hidden;
    position: fixed;
    box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
    bottom: 0;
    z-index: 10;
}

.back {
    position: relative;
    top: 10%;
    left: 100%;
}

.home {
    position: relative;
    top: 10%;
    left: 47%;
}

.menu {
    position: relative;
    top: 10%;
    left: -50px;
}

.background {
    position: fixed;
    height: 100%;
    width: 100%;
    z-index: -10;
    -webkit-filter: blur(5px);
}

.mySlides {
    display: none;
    position: relative;
    width: 100%;
    height: 100%;
}

.app_showcase {
    position: fixed;
    top: 10%;
    width: 100%;
    height: 40%;
}

.notification_centre {
    width: 310px;
    height: 100%;
    position: fixed;
    overflow: hidden;
    z-index: 12;
    display: none;
}

.overlay {
    background: url(https://raw.githubusercontent.com/arjunamgain/FilterMenu/master/images/header.jpg) no-repeat top /contain;
    position: absolute;
    left: 0;
    top: 0;
    right: 0;
    bottom: 0;
}

.overlay:after {
    content: '';
    position: absolute;
    left: 0;
    top: 0;
    right: 0;
    bottom: 0;
    background: rgba(71, 32, 84, 0.5);
}

.notification_centre > .top {
    position: relative;
    min-height: 240px;
    padding: 15px;
    color: #fff;
}

.user-profile {
    margin-top: 90px;
}

.user-profile img {
    height: 45px;
    width: 45px;
    border-radius: 50%;
    float: left;
    margin-right: 24px;
}

.user-details p {
    font-size: 11px;
}

.user-details {
    float: left;
    margin-top: 5px;
    vertical-align: bottom;
}

.user-details h4 {
    font-size: 18px;
}

.filter-btn {
    position: absolute;
    z-index: 2;
    right: 0;
    width: 40px;
    height: 40px;
    transition: all 0.4s ease-in-out 0s;
}

.filter-btn span {
    width: 40px;
    height: 40px;
    background: #FA396B;
    display: block;
    position: absolute;
    right: 25px;
    top: -70px;
    text-align: center;
    color: #fff;
    line-height: 40px;
    border-radius: 50%;
    font-size: 22px;
    z-index: 999;
}

.filter-btn a {
    position: absolute;
    width: 40px;
    height: 40px;
    line-height: 40px;
    text-align: center;
    right: 25px;
    display: block;
    top: -46px;
    color: #fff;
    z-index: 99;
    font-size: 22px;
    transition: all .4s cubic-bezier(.68, 1, .265, 1)
}

.filter-btn:after {
    height: 170px;
    width: 170px;
    content: '';
    background-color: #FA396B;
    position: absolute;
    top: -110px;
    right: -40px;
    border-radius: 50%;
    transform: scale(0);
    transition: all 0.3s ease-in-out 0s;
}

.filter-btn.open span.toggle-btn.ion-android-funnel {
    background-color: #DE3963;
}

.filter-btn.open .ion-android-funnel:before {
    content: "\f2d7";
}

.open:after {
    transform: scale(1);
}

.filter-btn.open a:nth-child(1) {
    transform: translate(9px, -62px);
}

.filter-btn.open a:nth-child(2) {
    transform: translate(-50px, -34px);
}

.filter-btn.open a:nth-child(3) {
    transform: translate(-56px, 25px);
}

.filter-btn.open a:nth-child(4) {
    transform: translate(5px, 61px);
}

.notification_centre .bottom {
    background-color: #fff;
    min-height: 303px;
    z-index: 1;
    padding: 35px;
    position: relative;
    color: #222;
    padding-top: 0px;
    height: 100%;
}

.bottom:after {
    content: '';
    position: absolute;
    top: -46px;
    background: #fff;
    left: -22px;
    right: 0;
    height: 100px;
    transform: rotate(10deg);
    width: 337px;
    z-index: -1;
}

.bottom .title {
    margin-bottom: 20px;
}

.bottom .title h3 {
    font-size: 22px;
    margin-bottom: 5px;
}

.title small {
    font-size: 10px;
    color: #888;
    text-transform: uppercase;
    letter-spacing: 1px;
}

ul.tasks .task-title {
    font-size: 13px;
    display: inline-block;
}

ul.tasks .task-time {
    float: right;
    font-size: 10px;
    color: #888;
}

ul.tasks .task-cat {
    font-size: 10px;
    display: block;
    color: #888;
}

ul.tasks li {
    margin-bottom: 16px;
    position: relative;
    z-index: 8;
}

ul.tasks li:after {
    content: '';
    position: absolute;
    left: -18px;
    top: 8px;
    height: 8px;
    width: 8px;
    border-radius: 50%;
}

ul.tasks li.red:after {
    background: #FF3163;
}

ul.tasks li.green:after {
    background: #54D6C7;
}

ul.tasks li.yellow:after {
    background: #EAB429;
}

ul.tasks::after {
    content: '';
    position: absolute;
    height: 400px;
    width: 1px;
    background: #eee;
    left: 20px;
    top: -68px;
}

ul li.hang {
    margin-bottom: 48px;
}

ul li.hang img {
    float: left;
    height: 20ox;
    width: 20px;
    border-radius: 50%;
    margin-right: 8px;
}

.notification_centre_show {
    position: fixed;
    top: 0px;
    height: 100%;
    width: 10px;
    z-index: 11;
}

.status_bar {
    background-color: #3498db;
    width: 100%;
    height: 25px;
    overflow: hidden;
    position: fixed;
    box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
    top: 0;
    z-index: 10;
}

.bubble-wrap {
    height: 56px;
    width: 56px;
    background-color: transparent;
    top: 0;
    right: 10px;
    position: absolute;
    border-radius: 50%;
    cursor: pointer;
    -webkit-transform: scale(1);
    -webkit-transition: all 0.3s ease-out;
    display: block;
}

.bubble-wrap.active {
    display: none;
}

.bubble {
    height: 56px;
    width: 56px;
    background-color: tomato;
    top: 0px;
    right: 10px;
    position: absolute;
    border-radius: 50%;
    -webkit-transform: scale(1);
    -webkit-transition: all 0.3s ease-out;
}

.bubble.active {
    -webkit-transform: scale(100);
    -webkit-transition: all 0.6s ease-out;
    -webkit-transition-delay: .4s;
}

.bubbleback {
    height: 56px;
    width: 56px;
    background-color: white;
    top: 0;
    right: 10px;
    position: absolute;
    border-radius: 50%;
    -webkit-transform: scale(1);
    opacity: 1;
}

.bubbleback.active {
    -webkit-transform: scale(1.5);
    opacity: 0;
    -webkit-transition: all 0.3s ease-out;
}

.paper-card-0 {
    width: 100%;
    background-color: whitesmoke;
}

.iron-image-0 {
    width: 100%;
}

.iron-image-0 #img.iron-image {
    height: 100%;
}

.card-content {
    background-color: whitesmoke;
}

.power_btn_icon {
    color: white;
    font-size: 50px;
}

.power_ctrl {
    display: none;
    position: fixed;
    top: 94.8%;
    z-index: 150;
}

.poweroff_btn {
    left: 50%;
}

.restart_btn {
    left: 15px;
}

.current_window {
    z-index: 9;
    position: fixed;
    width: 100%;
    height: 100%;
    top: 25px;
}

.bg_window {
    width: 50%;
    height: 50%;
    left: 25%;
    right: 25%;
    display: none;
    margin-top: 200px;
}

.sound_hud {
    position: fixed;
    top: 0;
    background-color: white;
    width: 100%;
    display: none;
}

.recent_panel {
    position: fixed;
    width: 350px;
    height: 440px;
    left: 450px;
    top: 230px;
    display: none;
}

.minimized_window {
    position: absolute;
    top: 0;
    left: 0;
    background: #FFFFFF;
    width: 350px;
    height: 440px;
    border-radius: 4px;
    box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
    -webkit-transform-origin: center;
    transform-origin: center;
    -webkit-transition: 0.4s cubic-bezier(0.28, 0.55, 0.385, 1.65);
    transition: 0.4s cubic-bezier(0.28, 0.55, 0.385, 1.65);
    cursor: pointer;
}

.minimized_window:nth-child(1) {
    z-index: 10;
    top: 0px;
    -webkit-transform-origin: top;
    transform-origin: top;
    -webkit-transform: scale(1);
    transform: scale(1);
    opacity: 1;
}

.minimized_window:nth-child(2) {
    z-index: 9;
    top: -15px;
    -webkit-transform-origin: top;
    transform-origin: top;
    -webkit-transform: scale(0.9);
    transform: scale(0.9);
    opacity: 0.9;
}

.minimized_window:nth-child(3) {
    z-index: 8;
    top: -30px;
    -webkit-transform-origin: top;
    transform-origin: top;
    -webkit-transform: scale(0.8);
    transform: scale(0.8);
    opacity: 0.8;
}

.minimized_window:nth-child(4) {
    z-index: 7;
    top: -45px;
    -webkit-transform-origin: top;
    transform-origin: top;
    -webkit-transform: scale(0.7);
    transform: scale(0.7);
    opacity: 0.7;
}

.minimized_window:nth-child(5) {
    z-index: 6;
    top: -60px;
    -webkit-transform-origin: top;
    transform-origin: top;
    -webkit-transform: scale(0.6);
    transform: scale(0.6);
    opacity: 0.6;
}

.minimized_window:nth-child(6) {
    z-index: 5;
    top: -75px;
    -webkit-transform-origin: top;
    transform-origin: top;
    -webkit-transform: scale(0.5);
    transform: scale(0.5);
    opacity: 0.5;
}

.minimized_window:nth-child(7) {
    z-index: 4;
    top: -90px;
    -webkit-transform-origin: top;
    transform-origin: top;
    -webkit-transform: scale(0.4);
    transform: scale(0.4);
    opacity: 0.4;
}

.minimized_window:nth-child(8) {
    z-index: 3;
    top: -105px;
    -webkit-transform-origin: top;
    transform-origin: top;
    -webkit-transform: scale(0.3);
    transform: scale(0.3);
    opacity: 0.3;
}

.card:nth-child(9) {
    z-index: 2;
    top: -120px;
    -webkit-transform-origin: top;
    transform-origin: top;
    -webkit-transform: scale(0.2);
    transform: scale(0.2);
    opacity: 0.2;
}

.minimized_window:nth-child(10) {
    z-index: 1;
    top: -135px;
    -webkit-transform-origin: top;
    transform-origin: top;
    -webkit-transform: scale(0.1);
    transform: scale(0.1);
    opacity: 0.1;
}

.minimized_window:nth-child(11) {
    z-index: 0;
    top: -150px;
    -webkit-transform-origin: top;
    transform-origin: top;
    -webkit-transform: scale(0);
    transform: scale(0);
    opacity: 0;
}

.minimized_window:first-child:hover {
    box-shadow: 0 0 20px rgba(0, 0, 0, 0.4);
    -webkit-transform: scale(1.05);
    transform: scale(1.05);
}

.minimized_window:last-child {
    opacity: 1;
}

.minimized_window {
    color: rgba(0, 0, 0, 0.2);
    font-size: 12px;
    text-align: center;
}

iframe {
    position: relative;
    width: 100%;
    height: 86%;
}

.header {
    color: white;
}

.appbook-viewport {
    display: none;
        position: fixed;
    top: 140;
    left: 169;
}
.page {
    background-color: whitesmoke;
    display: flex;
    justify-content: center;
}
.app_title {
    font-size: small;
}
.a {

    left: 50%;
        height: 30;
    position: relative;

    top: 20;
}
.index_letter {
        height: 30;
    position: relative;
    left: 0;
    top: 20;
}
.app_list {
    position: relative;
    width: 100%;
    height: 100%;
    top: 55;
}
.user-details h4 {
color: white;
}

